[gd_scene load_steps=2 format=3 uid="uid://cc42ijfofhger"]

[ext_resource type="Script" path="res://src/UI/CraftingProgressPopup/CraftingPopup.gd" id="1_kegrr"]

[node name="CraftingPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.4, 0.4)
mouse_filter = 1
script = ExtResource("1_kegrr")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -20.0
offset_right = 64.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(65, 20)
alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
